objects/JunoDoc__Doc_Template_Header__c/JunoDoc__Doc_Template_Header__c.object-meta.xml
<CustomObject>
    <label>Doc Template Header</label>
    <nameField>
        <label>Doc Template Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Template Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>