objects/JunoDoc__Doc_Template_Header__c/fields/JunoDoc__Header_Body__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Header_Body__c</fullName>
    <label>Header Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>