objects/JunoDoc__Doc_Template_Header__c/fields/JunoDoc__Master_Object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Master_Object__c</fullName>
    <label>Master Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>