objects/JunoDoc__Doc_Template_Header__c/fields/JunoDoc__Master_Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Master_Object_Fields__c</fullName>
    <label>Master Object Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>